QQmlBind: Only restore previous state if current state is still active

If some other Binding has overridden the one we're currently clearing,
we should not restore the previous state.

Amends commit e2fa7ab91310ea74c30e9458dfbe20d257578659

[ChangeLog][QtQml] The Binding element now only restores previous
bindings or values if its own binding is still active on destruction or
changes to its "when" property. If it has been overridden by another
Binding element, it will not disable that one anymore.

Pick-to: 6.8
Fixes: QTBUG-134922
Change-Id: Iac2883e7649dc0d2fb2669efa847becbb886ca64
Reviewed-by: Sami Shalayel <sami.shalayel@qt.io>
Reviewed-by: YaNing Lu <luyaning@uniontech.com>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit 6a8478829747289cdcce2a6e9628b31cfd865f15)
Reviewed-by: Semih Yavuz <semih.yavuz@qt.io>