tests/auto/qml/qqmlbinding/tst_qqmlbinding.cpp
@@ -7,6 +7,7 @@
 #include <private/qqmlanybinding_p.h>
 #include <private/qqmlbind_p.h>
 #include <private/qqmlcomponentattached_p.h>
+#include <private/qqmlinstantiator_p.h>
 #include <private/qqmlpropertytopropertybinding_p.h>
 #include <private/qquickrectangle_p.h>
 
@@ -50,6 +51,7 @@ private slots:
     void propertiesAttachedToBindingItself();
     void toggleEnableProperlyRemembersValues();
     void qQmlPropertyToPropertyBinding();
+    void delayedBindingDestruction();
 
 private:
     QQmlEngine engine;
@@ -787,6 +789,36 @@ void tst_qqmlbinding::qQmlPropertyToPropertyBinding()
     // QCOMPARE(target->bottom(), 88);
     QCOMPARE(target->left(), 11);
     // QCOMPARE(target->right(), 33);
+}
+
+void tst_qqmlbinding::delayedBindingDestruction()
+{
+    QQmlEngine engine;
+    QQmlComponent component(&engine, testFileUrl("delayedBindingDestruction.qml"));
+    QVERIFY2(component.isReady(), qPrintable(component.errorString()));
+    QScopedPointer<QObject> object(component.create());
+    QVERIFY(object);
+    QVERIFY(object->objectName().isEmpty());
+    QVERIFY(object->property("result").toString().isEmpty());
+
+    const auto verifyDelegate = [&](const QString &expected) {
+        QQmlInstantiator *instantiator
+                = object->property("instantiator").value<QQmlInstantiator *>();
+        QVERIFY(instantiator);
+        QCOMPARE(instantiator->object()->objectName(), expected);
+    };
+
+    QMetaObject::invokeMethod(object.data(), "toggle");
+    QCoreApplication::sendPostedEvents(nullptr, QEvent::DeferredDelete);
+    QCoreApplication::processEvents();
+    QCOMPARE(object->objectName(), QLatin1String("bar"));
+    verifyDelegate(QLatin1String("bar"));
+
+    QMetaObject::invokeMethod(object.data(), "toggle");
+    QCoreApplication::sendPostedEvents(nullptr, QEvent::DeferredDelete);
+    QCoreApplication::processEvents();
+    QCOMPARE(object->objectName(), QLatin1String("foo"));
+    verifyDelegate(QLatin1String("foo"));
 }
 
 QTEST_MAIN(tst_qqmlbinding)
